k8s/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: daview
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: com.tale.daview
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daview
spec:
  selector:
    matchLabels:
      app: com.tale.daview
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: com.tale.daview
    spec:
      containers:
        - image: us-east4-docker.pkg.dev/aarnavtale/library/daview:latest
          imagePullPolicy: Always
          name: daview
