k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daview
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: files.tale.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: daview
                port:
                  number: 3000
  tls:
    - hosts:
        - 'files.tale.me'
      secretName: daview-tls
